# TradingBot_tinkoff

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DEPLOY.md  Dockerfile  LICENSE  LICENSE.txt  README.md  SANDBOX_TO_REAL_CHECKLIST.md  __init__.py  advisor_ensemble.py  alerts.py  benchmark.py  broker.py  bug_audit.py  candle_cache.py  check_token.py  clear_tinvest_storage.py  config.py  config.yaml  create_sandbox_account.py  deepseek_advisor.py  docker-compose.yml  dynamic_portfolio.py  equity_history.py  finam_advisor.py  finam_client.py  fund_sandbox_account.py  gemini_advisor.py  get_figi.py  get_sandbox_accounts.py  groq_advisor.py  health_server.py  inspect_account.py  instrument_pause.py  learned_params.py  llm_advisor_base.py  logging_config.py  macro_advisor.py  (+34 more)
deploy/: tinkoff-bot.service
docker/: Dockerfile  docker-compose.yml
scripts/: audit_3day.py  audit_runtime.py  backup_data.py  check_apis.py  final_audit_check.py  lookup_figi.py  preflight_run.py  prepare_observation_start.py  refresh_portfolio_once.py  setup_github_secrets.ps1  simulate_rebalance.py  sync_sandbox_balance.py  telegram_ping.py  test_finam.py  test_finam_score.py  test_finam_select.py
src/: bot.py  config.py
tests/: __init__.py  test_advisor_comparison.py  test_advisor_ensemble_flags.py  test_benchmark.py  test_broker_connectivity.py  test_broker_retry.py  test_bug_audit.py  test_config.py  test_dynamic_portfolio.py  test_dynamic_portfolio_improvements.py  test_finam_advisor.py  test_health_server.py  test_instrument_pause.py  test_llm_advisor_base.py  test_portfolio.py  (+11 more)
(+21 files in other folders)
