[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tinkoff_bot"
version = "0.1.0"
description = "MOEX portfolio rebalancer: Tinkoff API, OpenRouter LLM, macro news, Telegram, Docker"
license = "LicenseRef-Proprietary"
requires-python = ">=3.10"
dependencies = [
  "python-dotenv",
  "PyYAML",
  "pandas",
  "prometheus-client",
  "aiogram",
  "openai",
  "optuna",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
packages = ["tinkoff_bot"]

[tool.setuptools.package-dir]
tinkoff_bot = "."
